# aphros

deploy/: CMakeLists.txt
src/: CMakeLists.txt
src/distr/: distrsolver.cpp
src/linear/: CMakeLists.txt  amgx.h
src/opencl/: CMakeLists.txt
